fixed change slide by change position to work Z-INDEX

--- a/src/pages/User/HomePage/HomaPageBanner/HomePageBanner.scss
+++ b/src/pages/User/HomePage/HomaPageBanner/HomePageBanner.scss
@@ -4,17 +4,13 @@
 	width: 100%;
 	height: 100vh;
 	position: relative;
-	z-index: -1;
+	z-index: 1;
 	
 	img{
+		position: relative;
 		height: 100vh;
 	}
-	// button {
-	// 	z-index: 100;
-	// 	&:hover {
-	// 		cursor: pointer;
-	// 		background-color: red;
-	// 		color: yellow;
-	// 	}
-	// }
+	button {
+
+	}
 }
