--- a/src/pages/User/HomePage/UserHeader/UserHeader.scss
+++ b/src/pages/User/HomePage/UserHeader/UserHeader.scss
@@ -15,7 +15,7 @@ $auth_distance: 10%;
     min-height: 8vh;
     background-color: rgba(31, .0, 30, 0.24);
     transition: .5s ease;
-    z-index: 1;
+    z-index: 10;
 
     &-logo {
         position: relative;
